# millkrs

./: .gitignore  Cargo.toml  config.example.toml  system_prompt.example
src/: agent.rs  bot.rs  config.rs  db.rs  logger.rs  main.rs  scheduler.rs  utils.rs
src/agent/: tools.rs
src/agent/tools/: create_scheduled_task.rs  get_current_time.rs  send_message.rs  web_search.rs
src/bot/: event_handle.rs  handler.rs  message_handle.rs  message_handler.rs
src/bot/message_handle/: friend_message.rs  group_message.rs  temp_message.rs
src/bot/message_handle/friend_message/: friend_chat.rs  friend_command.rs
src/db/: model.rs  scheduler_model.rs  scheduler_service.rs  service.rs  user_model.rs  user_service.rs
src/scheduler/: actuator.rs  manager.rs
