[package]
name = "millkrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "2"
log = "0.4"
config = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2"
milky-rust-sdk = "1"
rig-core = "0.29"
chrono = "0.4"
rand = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }